--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     </iframe>
                 </div>
                 <div class="grid-panels">
-                    <div class="info-card"><h2><i class="fa-solid fa-bell" aria-hidden="true"></i> Follow us for Updates!</h2><a href="https://t.me/+e9BLe1TuBBIxN2U1" target="_blank" rel="noopener noreferrer" class="action-button"><i class="fa-brands fa-telegram" aria-hidden="true"></i> Join Telegram</a></div>
+                    <div class="info-card"><h2><i class="fa-solid fa-bell" aria-hidden="true"></i> Follow us for Updates!</h2><a href="https://kohliinatioon.pages.dev/" target="_blank" rel="noopener noreferrer" class="action-button"><i class="fa-brands fa-telegram" aria-hidden="true"></i> Join Telegram</a></div>
                     <div class="info-card"><h2><i class="fa-solid fa-link" aria-hidden="true"></i> Copy Link & Share</h2><button class="action-button" id="shareButton" aria-label="Copy page link to clipboard"><i class="fa-solid fa-share-nodes" aria-hidden="true"></i> Share Link</button></div>
                 </div>
                 <a href="./" class="back-link"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i> Back to All Streams</a>
